--- a/style.css
+++ b/style.css
@@ -62,3 +62,8 @@
 .keyboard_key--dark {
     background: rgba(0, 0, 0, 0.25);
 }
+.title {
+    color:#228B22;
+    border-bottom: 3mm solid rgba(233, 162, 240, 0.945);
+    text-align: center;
+}
