--- a/style.css
+++ b/style.css
@@ -1,10 +1,33 @@
+body {
+    background-color: black;
+}
+
+h1 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
+h2 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.use-keyboard-input {
+    background-color: rgba(233, 162, 240, 0.945);
+    color: black;
+    font-size: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 30px;
+    padding-left: 10px;
+    padding-top: 15px;
+}
+
 .keyboard {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     padding: 5px 0;
-    background: #004134;
+    background: rgba(233, 162, 240, 0.945);
     box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
     user-select: none;
     transition: bottom 0.4s;
@@ -23,7 +46,7 @@
     margin: 3px;
     border-radius: 4px;
     border: none;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgb(175, 82, 184);
     color: #ffffff;
     font-size: 1.05rem;
     outline: none;
@@ -63,7 +86,7 @@
     background: rgba(0, 0, 0, 0.25);
 }
 .title {
-    color:#228B22;
+    color:rgba(233, 162, 240, 0.945);
     border-bottom: 3mm solid rgba(233, 162, 240, 0.945);
     text-align: center;
 }
